# Quadruped_CPG

./: .gitattributes  README.md  go1_simulation.py
quadruped_bringup/: CMakeLists.txt  package.xml
quadruped_bringup/launch/: quadruped_bringup.launch.py
quadruped_gait_planner/: CMakeLists.txt  package.xml
quadruped_gait_planner/config/: cpg.yaml
quadruped_gait_planner/include/quadruped_gait_planner/: GaitPlanner.hpp
quadruped_gait_planner/launch/: quadruped_gait_planner.launch.py
quadruped_gait_planner/src/: GaitPlanner.cpp
quadruped_gait_planner/srv/: GaitParameters.srv
quadruped_kinematics/: CMakeLists.txt  package.xml
quadruped_kinematics/config/: go1.yaml
quadruped_kinematics/include/quadruped_kinematics/: InverseKinematics.hpp
quadruped_kinematics/launch/: quadruped_kinematics.launch.py
quadruped_kinematics/msg/: LegIK.msg  LegJoints.msg  QuadrupedIK.msg  QuadrupedJoints.msg
quadruped_kinematics/src/: InverseKinematics.cpp  ik_server.cpp
quadruped_kinematics/srv/: LegIK.srv  QuadrupedIK.srv
quadruped_simulation/: go1_simulation.py
quadruped_simulation/isaac_sim/go1/: __init__.py  go1.usd  go1_cpg.py  go1_kinematics.py  go1_node.py  go1_robot.py
quadruped_teleop/: CMakeLists.txt  package.xml
quadruped_teleop/config/: dualsense_joystick.yaml  go1_limits.yaml
quadruped_teleop/include/quadruped_teleop/: EMAFilter.hpp  JoyTeleop.hpp
quadruped_teleop/launch/: joy_teleop.launch.py
quadruped_teleop/src/: JoyTeleop.cpp
