<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadruped_bringup</name>
  <version>0.0.0</version>
  <description>Quadruped Bringup package</description>
  <maintainer email="felipe18mohr@gmail.com">Felipe Mohr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>quadruped_teleop</depend>
  <depend>quadruped_kinematics</depend>
  <depend>quadruped_gait_planner</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
